fix: detector span visibility

--- a/detection/style.css
+++ b/detection/style.css
@@ -1,3 +1,7 @@
 .impactCO2-container {
   display: inline;
 }
+
+.hidden {
+  display: none;
+}
